--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -448,7 +448,7 @@
     "description": "On tokens page"
   },
   "popup_html_tokens_settings_text": {
-    "message": "View token information and chose which tokens to display. Learn more about custom tokens on the Steem blockchain at <a href=\"https://steem-engine.com\" target=\"_blank\">https://steem-engine.com</a>.",
+    "message": "View token information and chose which tokens to display. Learn more about custom tokens on the Steem blockchain at <a href=\"https://steem-engine.net\" target=\"_blank\">https://steem-engine.net</a>.",
     "description": "On tokens page"
   },
   "popup_html_available": {
