--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -432,7 +432,7 @@
     "description": "On tokens page"
   },
   "popup_html_tokens_settings_text": {
-    "message": "Ver información de tokens y elegir qué tokens mostrar. Aprende más sobre tokens personalizados en la blockchain de Steem en <a href=\"https://steem-engine.com\" target=\"_blank\">https://steem-engine.com</a>.",
+    "message": "Ver información de tokens y elegir qué tokens mostrar. Aprende más sobre tokens personalizados en la blockchain de Steem en <a href=\"https://steem-engine.net\" target=\"_blank\">https://steem-engine.net</a>.",
     "description": "On tokens page"
   },
   "popup_html_available": {
