--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -432,7 +432,7 @@
     "description": "On tokens page"
   },
   "popup_html_tokens_settings_text": {
-    "message": "Afficher les informations des token et choisir lesquels afficher. En savoir plus sur les tokens personnalisés Steem sur<a href=\"https://steem-engine.com\" target=\"_blank\">https://steem-engine.com</a>.",
+    "message": "Afficher les informations des token et choisir lesquels afficher. En savoir plus sur les tokens personnalisés Steem sur<a href=\"https://steem-engine.net\" target=\"_blank\">https://steem-engine.net</a>.",
     "description": "On tokens page"
   },
   "popup_html_available": {
