--- a/_locales/ko/messages.json
+++ b/_locales/ko/messages.json
@@ -432,7 +432,7 @@
     "description": "On tokens page"
   },
   "popup_html_tokens_settings_text": {
-    "message": "토큰 정보를 확인하고 지갑에서 보고 싶은 토큰을 선택하세요. 스팀 블록체인 상의 커스텀 토큰에 관한 추가 정보는 <a href=\"https://steem-engine.com\" target=\"_blank\">https://steem-engine.com</a>에서 확인하실 수 있습니다.",
+    "message": "토큰 정보를 확인하고 지갑에서 보고 싶은 토큰을 선택하세요. 스팀 블록체인 상의 커스텀 토큰에 관한 추가 정보는 <a href=\"https://steem-engine.net\" target=\"_blank\">https://steem-engine.net</a>에서 확인하실 수 있습니다.",
     "description": "On tokens page"
   },
   "popup_html_available": {
