--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -432,7 +432,7 @@
     "description": "On tokens page"
   },
   "popup_html_tokens_settings_text": {
-    "message": "查看代币资讯并选择要显示的代币。 在<a href=\"https://steem-engine.com\" target=\"_blank\"> https://steem-engine.com </a>上了解有关Steem区块链上订製代币的更多讯息。",
+    "message": "查看代币资讯并选择要显示的代币。 在<a href=\"https://steem-engine.net\" target=\"_blank\"> https://steem-engine.net </a>上了解有关Steem区块链上订製代币的更多讯息。",
     "description": "On tokens page"
   },
   "popup_html_available": {
