--- a/_locales/zh_TW/messages.json
+++ b/_locales/zh_TW/messages.json
@@ -432,7 +432,7 @@
     "description": "On tokens page"
   },
   "popup_html_tokens_settings_text": {
-    "message": "查看代幣資訊並選擇要顯示的代幣。 在<a href=\"https://steem-engine.com\" target=\"_blank\"> https://steem-engine.com </a>上了解有關Steem區塊鏈上訂製代幣的更多訊息。",
+    "message": "查看代幣資訊並選擇要顯示的代幣。 在<a href=\"https://steem-engine.net\" target=\"_blank\"> https://steem-engine.net </a>上了解有關Steem區塊鏈上訂製代幣的更多訊息。",
     "description": "On tokens page"
   },
   "popup_html_available": {
